[package]
name = "mp4-box"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
thiserror = "1.0.37"
tokio = { version = "1", features = ["io-util", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "sync", "macros", "rt-multi-thread"] }
anyhow = "1.0.66"
